--- a/tests/test.html
+++ b/tests/test.html
@@ -1,3 +1,4 @@
 <!DOCTYPE html>
-<script async src=../complex.js></script>
+
+<script defer src=../complex.js></script>
 <script defer src=test.js></script>
